--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -298,14 +298,15 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary: #ff4066; //$blue !default;
-$secondary: #fb8c00; //#fff16a; //$gray-600 !default;
+$primary: #ff4066; // custom  //$blue !default;
+$secondary: #fb8c00; // custom //#fff16a; //$gray-600 !default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-900 !default;
+$darkblue: #262a48; // custom
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
@@ -318,6 +319,7 @@ $theme-colors: (
   "danger": $danger,
   "light": $light,
   "dark": $dark,
+  "darkblue": $darkblue,
 ) !default;
 // scss-docs-end theme-colors-map
 
@@ -556,9 +558,10 @@ $aspect-ratios: (
 
 // scss-docs-start font-variables
 // stylelint-disable value-keyword-case
-$font-family-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
-  "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-sans-serif: "Noto Serif TC", serif, system-ui, -apple-system,
+  "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial,
+  sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+  "Noto Color Emoji" !default;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
   "Liberation Mono", "Courier New", monospace !default;
 // stylelint-enable value-keyword-case
