single course page layout

--- a/src/assets/_helpers.scss
+++ b/src/assets/_helpers.scss
@@ -12,6 +12,10 @@
   background-attachment: fixed;
 }
 
+.full-height {
+  min-height: 100vh;
+}
+
 .text-hover {
   transition: all 0.5 ease;
   color: white;
