--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -604,6 +604,10 @@ $font-sizes: (
   4: $h4-font-size,
   5: $h5-font-size,
   6: $h6-font-size,
+  7: 14px,
+  //coustom
+  8: 12px,
+  //coustom
 ) !default;
 // scss-docs-end font-sizes
 
