--- a/src/assets/_helpers.scss
+++ b/src/assets/_helpers.scss
@@ -131,18 +131,25 @@
   }
 }
 
-.highlight-on-hover {
-  position: relative;
-
-  &:hover::after {
-    content: "";
-
-    position: absolute;
-    left: 0;
-    bottom: -5;
-    width: 100%;
-    height: 5px;
-    background-color: yellow;
-    z-index: -1;
+.link-style {
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(50%, transparent),
+    color-stop(50%, #dad8c3)
+  );
+  background-image: linear-gradient(transparent 50%, #dad8c3 0);
+  background-repeat: no-repeat;
+  background-size: 0 100%;
+  border: none !important;
+  text-decoration: none;
+  -webkit-transition: background-size 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
+  transition: background-size 0.25s cubic-bezier(0.215, 0.61, 0.355, 1);
+  will-change: background-size;
+  &:hover {
+    background-size: 100% 125%;
+    -webkit-text-decoration-color: rgba(100, 97, 63, 0);
+    text-decoration-color: rgba(100, 97, 63, 0);
   }
 }
